tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__AssemblingonSpac-UVG21mYSQJex90gQWdkpIw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7355012160241084707,
  "prerequisites": [
    12181192370669533317
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Has 64 parallels and consumes ~30b EU/t per module, expensive to run but absolutely worth it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Assembling on Space Steroids",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12181192370669533317
  ],
  "rewards": [],
  "tasks": []
}
