tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__Magnetohydrodyna-52Yelo6KSLGumzXo-_F5DQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10271101829445155085,
  "prerequisites": [
    9974706694212917942
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Or MHDCSM for short.\n\nThis is your primary material for UXV components. It's tricky to make and extremely expensive, as all endgame materials should be.\n\nInstead of solidifying it directly, you need to coat Eternity parts with it.\n\nHave fun!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magnetohydrodynamically Constrained Star Matter",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9974706694212917942
  ],
  "rewards": [],
  "tasks": []
}
