tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__RuleofThrees-bHFEDKAiTwGxaiyZEsmdjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11538872061305396622,
  "prerequisites": [
    12181192370669533317,
    15584223032475393689
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The final external structural upgrade to the Forge requires the most advanced understanding of graviton shards and their applications in extreme environments. With this, the last 4 module slots of the Forge of the Gods are available to construct, ascending your operation to unseen heights of technological mastery.\n\n[note]Adding a third and final ring to your Godforge allows for 4 additional modules, as well as allowing you to pick all three paths in the split paths part of the upgrade tree, allowing for a fully upgraded Godforge.[/note]\n\n[note]Usage of a third ring requires the EE upgrade.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lRule of Threes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12181192370669533317,
    15584223032475393689
  ],
  "rewards": [],
  "tasks": []
}
