tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__StargateBase-AAAAAAAAAAAAAAAAAAAKDg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2574,
  "prerequisites": [
    2575
  ],
  "properties": {
    "auto_claim": false,
    "desc": "We need one of these to form the base of the stargate.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Stargate Base",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2575
  ],
  "rewards": [],
  "tasks": []
}
